
      warning ("off", "Octave:quadcc:RelTol-conversion")

 ** The properties "BackgroundColor", "EdgeColor", "LineStyle",
    "LineWidth", and "Margin" are now implemented for text objects using
    an OpenGL toolkit.

 ** An initial implementation of alpha transparency has been made for
    patch and surface objects.  Printing to svg and pdf is supported.

 ** The following statistical functions have been moved from core
    Octave to the statistics package available from Octave Forge.

    table -> crosstab

 ** Other new functions added in 4.4:

      camlookat
      camorbit
      campos
      camroll
      camtarget
      camup
      camva
      camzoom
      corrcoef
      getframe
      gsvd
      hgtransform
      humps
      integral
      integral2
      integral3
      openvar
      quad2d
      repelem
      rticks
      thetaticks
      vecnorm
      xticklabels
      xticks
      yticklabels
      yticks
      zticklabels
      zticks

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.4 and will
    be removed from Octave 4.8 (or whatever version is the second major
    release after 4.4):

      Function             | Replacement
      ---------------------|------------------

 ** The following functions were deprecated in Octave 4.0 and have been
    removed from Octave 4.4.

      allow_noninteger_range_as_index
      bicubic
      delaunay3
      do_braindead_shortcircuit_evaluation
      dump_prefs
      find_dir_in_path
      finite
      fmod
      fnmatch
      gmap40
      loadaudio
      luinc
      mouse_wheel_zoom
      nfields
      octave_tmp_file_name
      playaudio
      saveaudio
      setaudio
      syl
      usage

 ** The "Octave:undefined-return-values" warning ID is obsolete.  Octave
    now throws an error for any attempts to assign undefined values that
    might be returned from functions.

 ** Deprecated graphics properties.
